--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       display: flex;
       background-color: #F9F4DB;
       height: fit-content;
+      width: fit-content;
       border-radius: 15px;
       margin: 10px 10px;
     }
@@ -184,6 +185,7 @@
     #bestsellers {
       background-color: #F9F4DB;
       height: fit-content;
+      width: initial;
       border-radius: 15px;
       margin: 10px 10px;
       padding: 20px;
@@ -193,7 +195,6 @@
     #books {
       background-color: #E7D6AC;
       height: fit-content;
-      width: auto;
       margin: inherit;
       border-radius: 15px;
       padding: 10px;
