--- a/index.html
+++ b/index.html
@@ -7,329 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Buddy</title>
   <link rel="shortcut icon" href="./book_favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <style>
-    * {
-      margin: 0px;
-      padding: 0px;
-    }
-
-    header {
-      background-color: #ffffff;
-    }
-
-    .navigation {
-      display: flex;
-      justify-content: space-between;
-      width: auto;
-    }
-
-    .list1 {
-      display: flex;
-      padding: 10px 0px;
-    }
-
-    .list2 {
-      display: flex;
-      padding: 10px 0px;
-    }
-
-    .list1 li {
-      list-style: none;
-    }
-
-    .list2 li {
-      list-style: none;
-    }
-
-    .list1 li a {
-      text-align: center;
-      text-decoration: none;
-      color: #550d0e;
-      padding: 10px 15px;
-      font-size: 20px;
-    }
-
-    .list1 li a:hover {
-      color: red;
-      font-size: 22px;
-    }
-
-    .list2 li a {
-      text-align: center;
-      text-decoration: none;
-      color: #550d0e;
-      padding: 0px 20px;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    .list2 li a:hover {
-      color: red;
-      font-size: 22px;
-    }
-
-    .list1 img {
-      width: 20px;
-      margin-top: 2px;
-    }
-
-    .list1 img:hover {
-      width: 25px;
-    }
-
-    .search {
-      display: flex;
-      height: fit-content;
-      background-color: #F9F4DB;
-      align-items: center;
-      justify-content: space-between;
-      width: fit-content;
-      min-width: 97vw;
-      border-radius: 10px;
-      margin: 0px 10px;
-    }
-
-    .text-div {
-      display: flex;
-      width: 50vw;
-    }
-
-    #btnsrch {
-      color: #550d0e;
-      background-color: #E7D6AC;
-      cursor: pointer;
-      border-radius: 15px;
-      padding: 10px 20px;
-      margin-right: 30px;
-      border: 2px solid #E7D6AC;
-    }
-    #btnsrch:hover{
-      background-color: #F9F4DB;
-    }
-    #btnadv {
-      padding: 10px 20px;
-      margin-right: 50px;
-      color: #550d0e;
-      background-color: #F9F4DB;
-      cursor: pointer;
-      border-radius: 15px;
-      border: 2px solid #E7D6AC;
-    }
-    #btnadv:hover{
-      background-color: #E7D6AC;
-    }
-
-    #btns-div {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    #txtar {
-      padding: 10px;
-      padding-right: 50px;
-      width: 50vw;
-      height: fit-content;
-      border: 2px solid #F9F4DB;
-      border-radius: 10px;
-      font-size: medium;
-      background-image: url(./SearchIcon.jpg);
-      background-position: 97%;
-      background-size: 20px;
-      background-repeat: no-repeat;
-    }
-
-    #brdnme {
-      font-size: 30px;
-      margin: 10px 10px;
-      color: #550D0E;
-    }
-
-    .shop {
-      display: flex;
-      margin: 10px 10px;
-    }
-
-    .select {
-      background-color: red;
-    }
-
-    #mainbody {
-      display: flex;
-      background-color: #F9F4DB;
-      height: fit-content;
-      width: fit-content;
-      border-radius: 15px;
-      margin: 10px 10px;
-    }
-
-    #bookspace {
-      background-color: #E7D6AC;
-      margin: 15px 20px;
-      width: fit-content;
-      height: fit-content;
-      border-radius: 15px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #signupbar {
-      background-color: #E7D6AC;
-      margin: 15px 20px;
-      width: fit-content;
-      border-radius: 15px;
-      /* display: flex; */
-
-    }
-
-    #bestsellers {
-      background-color: #F9F4DB;
-      height: fit-content;
-      width: initial;
-      border-radius: 15px;
-      margin: 10px 10px;
-      padding: 20px;
-
-    }
-
-    #books {
-      background-color: #E7D6AC;
-      height: fit-content;
-      margin: inherit;
-      border-radius: 15px;
-      padding: 10px;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      overflow: scroll;
-    }
-    #signupbar h3 {
-      display: block;
-    }
-
-    #signemail {
-      width: 220px;
-      margin: 10px 15px;
-      padding: 7px;
-      border: 2px solid #E7D6AC;
-      border-radius: 5px;
-    }
-
-    /* #bookspcimg {
-      width: 120px;
-      height: 100px;
-    } */
-
-    #signupbtn {
-      width: 110px;
-      margin: 5px 15px;
-      padding: 10px;
-      color: #550d0e;
-      background-color: #F9F4DB;
-      cursor: pointer;
-      border-radius: 10px;
-      border: 2px solid #E7D6AC;
-      background-image: url(./add-user.png);
-      background-position: 97%;
-      background-size: 20px;
-      background-repeat: no-repeat;
-    }
-
-    #signupbtn:hover {
-      background-color: #E7D6AC;
-      border-color: #F9F4DB;
-    }
-
-    /* #notepadimg{
-        width: 120px;
-        height: 100px;
-        justify-content: end;
-    } */
-    .heading {
-      padding: 5px;
-      color: #550D0E;
-    }
-
-    #best_Selling_Header {
-      margin: 10px 10px;
-      color: #550D0E;
-      text-align: center;
-    }
-
-    .book-center {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      padding: 10px;
-      align-items: center;
-    }
-
-    .text {
-      display: block;
-      color: #550D0E;
-      font-size: medium;
-      padding: 10px 10px;
-      text-align: center;
-    }
-
-    .book_Imgs {
-      height: 200px;
-      width: 131px;
-    }
-
-    .downloadBook {
-      border-radius: 10px;
-      color: #550D0E;
-      font-size: medium;
-      width: 130px;
-      padding: 10px 10px;
-      margin-top: 10px;
-      border: 2px solid #F9F4DB;
-      background-color: #F9F4DB;
-      background-image: url(./download.png);
-      background-position: 97%;
-      background-size: 20px;
-      background-repeat: no-repeat;
-      text-align: center;
-      cursor: pointer;
-    }
-
-    .downloadBook:hover {
-      background-color: #E7D6AC;
-    }
-
-    .bookSpace1 {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      padding: 10px;
-      align-items: center;
-    }
-
-    .Signup-news {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-
-    footer {
-      text-align: center;
-      color: #550D0E;
-      font-size: x-large;
-      font-weight: bold;
-      background-color: #F9F4DB;
-      margin: 10px 10px;
-      padding: 20px;
-      border-radius: 10px;
-      width: auto;
-    }
-  </style>
   <header>
     <nav class="navigation">
       <div class="nav1">
@@ -394,7 +75,7 @@
             <input type="email" name="email" id="signemail" placeholder="E-mail">
           </div>
           <div class="SignUpBtn">
-            <button type="submit" id="signupbtn">Sign UP</button>
+            <button type="reset" id="signupbtn" onclick="signUp()">Sign Up</button>
           </div>
         </div>
 
@@ -405,76 +86,45 @@
       <div id="books">
         <div class="book-center ">
           <div class="text">
-            <span><strong>I Learned From Trees</strong></span><br>
-            <span>L.E Bowman</span>
+            <span><strong>Atomic Habits </strong></span>
+            <span>James Clear</span>
           </div>
-          <img class="book_Imgs" src="./image 13.png" alt="book1">
-          <button class="downloadBook" type="submit" onclick="download(this.id)" id = "1">Download</button>
+          <img class="book_Imgs" src="https://covers.zlibcdn2.com/covers299/books/96/f9/97/96f997237d1fffe83467f130c350f275.jpg" alt="book1">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "1">Download</button>
         </div>
         <div class="book-center ">
           <div class="text">
-            <span><strong>Thief River Falls</strong></span><br>
-            <span>Brian Freeman</span>
+            <span><strong>Ego Is the Enemy</strong></span>
+            <span>Ryan Holiday</span>
           </div>
-          <img class="book_Imgs" src="./image 16.png" alt="book2">
-          <button class="downloadBook" type="submit" onclick="download(this.id)" id="2">Download</button>
+          <img class="book_Imgs" src="https://covers.zlibcdn2.com/covers299/books/0c/c0/cf/0cc0cf7948ead84332112cc0160efb3d.jpg" alt="book2">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="2">Download</button>
         </div>
         <div class="book-center ">
           <div class="text">
-            <span><strong>If it Bleeds</strong></span><br>
-            <span>Stephen King</span>
+            <span><strong>Ikigai</strong></span>
+            <span>Francesc Miralles and Hector Garcia</span>
           </div>
-          <img class="book_Imgs" src="./image 17.png" alt="book3">
-          <button class="downloadBook" type="submit">Download</button>
+          <img class="book_Imgs" src="https://m.media-amazon.com/images/I/814L+vq01mL.jpg" alt="book3">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "3">Download</button>
         </div>
         <div class="book-center ">
           <div class="text">
-            <span><strong>I Learned From Trees</strong></span><br>
-            <span>L.E Bowman</span>
+            <span><strong>Rich Dad Poor Dad </strong></span>
+            <span>Robert T. Kiyosaki</span>
           </div>
-          <img class="book_Imgs" src="./image 13.png" alt="book1">
-          <button class="downloadBook" type="submit">Download</button>
+          <img class="book_Imgs" src="https://covers.zlibcdn2.com/covers299/books/70/32/d8/7032d82ffdc013053cb5ba5e04c8bc74.jpg" alt="book1">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="4">Download</button>
         </div>
         <div class="book-center ">
           <div class="text">
-            <span><strong>Thief River Falls</strong></span><br>
-            <span>Brian Freeman</span>
+            <span><strong>Mindset</strong></span>
+            <span>Carol Dweck</span>
           </div>
-          <img class="book_Imgs" src="./image 16.png" alt="book2">
-          <button class="downloadBook" type="submit">Download</button>
+          <img class="book_Imgs" src="https://covers.zlibcdn2.com/covers299/books/4b/25/80/4b2580b6867fe22237237b74ba9e3918.jpg" alt="book1">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="5">Download</button>
         </div>
-        <div class="book-center ">
-          <div class="text">
-            <span><strong>If it Bleeds</strong></span><br>
-            <span>Stephen King</span>
-          </div>
-          <img class="book_Imgs" src="./image 17.png" alt="book3">
-          <button class="downloadBook" type="submit">Download</button>
-        </div>
-        <div class="book-center ">
-          <div class="text">
-            <span><strong>I Learned From Trees</strong></span><br>
-            <span>L.E Bowman</span>
-          </div>
-          <img class="book_Imgs" src="./image 13.png" alt="book1">
-          <button class="downloadBook" type="submit">Download</button>
-        </div>
-        <div class="book-center ">
-          <div class="text">
-            <span><strong>Thief River Falls</strong></span><br>
-            <span>Brian Freeman</span>
-          </div>
-          <img class="book_Imgs" src="./image 16.png" alt="book2">
-          <button class="downloadBook" type="submit">Download</button>
-        </div>
-        <div class="book-center ">
-          <div class="text">
-            <span><strong>If it Bleeds</strong></span><br>
-            <span>Stephen King</span>
-          </div>
-          <img class="book_Imgs" src="./image 17.png" alt="book3">
-          <button class="downloadBook" type="submit">Download</button>
-        </div>
+        
 
       </div>
     </div>
@@ -484,16 +134,6 @@
     <p>&copy; BookBuddy.co</p>
   </footer>
 </body>
-<script>
-  function download(id){
-    if(id == "2"){
-      console.log("1 clicked")
-      window.open("https://b-ok.asia/dl/5341304/cfc088")
-    }
-    else{
-      console.log("No")
-    }
-  }
-</script>
+<script src="./script.js"></script>
 
 </html>
