--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="nav1">
         <ul class="list1">
           <li>
-            <a href=""><img src="./home.png" alt="Home_icon" /></a>
+            <a href="./index.html"><img src="./home.png" alt="Home_icon" /></a>
           </li>
           <li><a href="">Contact</a></li>
           <li><a href="">Help</a></li>
@@ -26,7 +26,7 @@
         <ul class="list2">
           <li><a>Wishlist</a></li>
           <li><a>My books</a></li>
-          <li><a>Log in/Sign up</a></li>
+          <li><a href="./login.html">Log in/Sign up</a></li>
         </ul>
       </div>
     </nav>
