--- a/login.html
+++ b/login.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login To Book Buddy</title>
     <link rel="shortcut icon" href="./book_favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
 </head>
-<body style="background-image: url(./book-library-with-open-textbook.jpg);background-repeat: no-repeat; background-size: cover;">
+<body>
     <header>
         <nav class="navigation">
       <div class="nav1">
