--- a/login.html
+++ b/login.html
@@ -55,6 +55,6 @@
         </div>
         
     </main>
-    <script src="./script.js"></script>
+    <script src="./login.js"></script>
 </body>
 </html>
