--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="list2">
           <li><a>Wishlist</a></li>
           <li><a>My books</a></li>
-          <li id="login"><a href="./login.html">Log in/Sign up</a></li>
+          <li><a href="./login.html">Log in/Sign up</a></li>
         </ul>
       </div>
     </nav>
