--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
             <span><strong>Atomic Habits </strong></span>
             <span>James Clear</span>
           </div>
-          <img class="book_Imgs" src="https://covers.zlibcdn2.com/covers299/books/96/f9/97/96f997237d1fffe83467f130c350f275.jpg" alt="book1">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "1">Download</button>
+          <img class="book_Imgs" src="https://m.media-amazon.com/images/I/51-nXsSRfZL._SY264_BO1,204,203,200_QL40_FMwebp_.jpg" alt="book1">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "1">Buy</button>
         </div>
         <div class="book-center ">
           <div class="text">
             <span><strong>Ego Is the Enemy</strong></span>
             <span>Ryan Holiday</span>
           </div>
-          <img class="book_Imgs" src="https://covers.zlibcdn2.com/covers299/books/0c/c0/cf/0cc0cf7948ead84332112cc0160efb3d.jpg" alt="book2">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="2">Download</button>
+          <img class="book_Imgs" src="https://m.media-amazon.com/images/I/51os4QMx98L._SY264_BO1,204,203,200_QL40_FMwebp_.jpg" alt="book2">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="2">Buy</button>
         </div>
         <div class="book-center ">
           <div class="text">
@@ -106,23 +106,23 @@
             <span>Francesc Miralles and Hector Garcia</span>
           </div>
           <img class="book_Imgs" src="https://m.media-amazon.com/images/I/814L+vq01mL.jpg" alt="book3">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "3">Download</button>
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "3">Buy</button>
         </div>
         <div class="book-center ">
           <div class="text">
             <span><strong>Rich Dad Poor Dad </strong></span>
             <span>Robert T. Kiyosaki</span>
           </div>
-          <img class="book_Imgs" src="https://covers.zlibcdn2.com/covers299/books/70/32/d8/7032d82ffdc013053cb5ba5e04c8bc74.jpg" alt="book1">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="4">Download</button>
+          <img class="book_Imgs" src="https://m.media-amazon.com/images/I/51A88IvtjGL._SY264_BO1,204,203,200_QL40_FMwebp_.jpg" alt="book1">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="4">Buy</button>
         </div>
         <div class="book-center ">
           <div class="text">
             <span><strong>Mindset</strong></span>
             <span>Carol Dweck</span>
           </div>
-          <img class="book_Imgs" src="https://covers.zlibcdn2.com/covers299/books/4b/25/80/4b2580b6867fe22237237b74ba9e3918.jpg" alt="book1">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="5">Download</button>
+          <img class="book_Imgs" src="https://m.media-amazon.com/images/I/51jBmofYTwL.jpg" alt="book1">
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="5">Buy</button>
         </div>
       </div>
     </div>
