--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <input type="text" id="txtar" placeholder="Search"></input>
     </div>
     <div id="btns-div">
-      <button id="btnsrch">Search</button>
+      <button id="btnsrch" onclick="search()">Search</button>
       <button id="btnadv">Advanced Search</button>
     </div>
     </div>
