--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section class="search">
     <div id="brdnme">BookBuddy</div>
     <div class="text-div">
-      <input type="text" id="txtar" placeholder="Search"></input>
+      <input type="text" id="txtar" placeholder="Search on LibGen"></input>
     </div>
     <div id="btns-div">
       <button id="btnsrch" onclick="search()">Search</button>
@@ -90,7 +90,7 @@
             <span>James Clear</span>
           </div>
           <img class="book_Imgs" src="https://m.media-amazon.com/images/I/51-nXsSRfZL._SY264_BO1,204,203,200_QL40_FMwebp_.jpg" alt="book1">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "1">Buy</button>
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "1">Download</button>
         </div>
         <div class="book-center ">
           <div class="text">
@@ -98,7 +98,7 @@
             <span>Ryan Holiday</span>
           </div>
           <img class="book_Imgs" src="https://m.media-amazon.com/images/I/51os4QMx98L._SY264_BO1,204,203,200_QL40_FMwebp_.jpg" alt="book2">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="2">Buy</button>
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="2">Download</button>
         </div>
         <div class="book-center ">
           <div class="text">
@@ -106,7 +106,7 @@
             <span>Francesc Miralles and Hector Garcia</span>
           </div>
           <img class="book_Imgs" src="https://m.media-amazon.com/images/I/814L+vq01mL.jpg" alt="book3">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "3">Buy</button>
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id = "3">Download</button>
         </div>
         <div class="book-center ">
           <div class="text">
@@ -114,7 +114,7 @@
             <span>Robert T. Kiyosaki</span>
           </div>
           <img class="book_Imgs" src="https://m.media-amazon.com/images/I/51A88IvtjGL._SY264_BO1,204,203,200_QL40_FMwebp_.jpg" alt="book1">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="4">Buy</button>
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="4">Download</button>
         </div>
         <div class="book-center ">
           <div class="text">
@@ -122,7 +122,7 @@
             <span>Carol Dweck</span>
           </div>
           <img class="book_Imgs" src="https://m.media-amazon.com/images/I/51jBmofYTwL.jpg" alt="book1">
-          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="5">Buy</button>
+          <button class="downloadBook" type="submit" onclick="download_Book(this.id)" id="5">Download</button>
         </div>
       </div>
     </div>
