--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
         <div class="centerLogin">
             <div class="loginForm">
         <h1>LOGIN FORM</h1>
-        <form action="#" method="post">
+        <form action="#" method="post" id="loginForm">
           <label>Username</label><br /><br />
           <input
             type="text"
