--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
             <button type="reset" id="signupbtn" onclick="signUp()">Sign Up</button>
           </div>
         </div>
-
       </div>
     </div>
     <h2 id="best_Selling_Header">Best Selling Books</h2>
@@ -139,7 +138,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   <footer>
-    <p>&copy; BookBuddy.co</p>
+    <p><span>Disclaimer: Any links used for the project is only for eductional purposes</span><br><span>&copy; BookBuddy.co</span></p>
   </footer>
   <script>
     var loader=document.getElementById("preloader");
